--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ JB :
     # Set 'provider' to false to turn commenting off globally.
     #
     comments :
-        provider : disqus
+        provider : disqus #duoshuo #
         disqus :
             short_name : jekyllbootstrap
         livefyre :
